--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <script src="z_initialisation.js"></script>  
   <script src="z_ModelLoader.js"></script>
 
-   <script src="1Draw_hands.js"></script> <!--CHANGE THIS ONE -->
+   <!-- <script src="1Draw_hands.js"></script> CHANGE THIS ONE -->
+   <!-- <script src="1Draw_handsUX.js"></script> CHANGE THIS ONE -->
+   <script src="1Draw_handsLR.js"></script> <!-- CHANGE THIS ONE -->
    
 </head>
 
