--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
    <!-- <script src="1Draw_hands.js"></script> CHANGE THIS ONE -->
    <!-- <script src="1Draw_handsUX.js"></script> CHANGE THIS ONE -->
-   <script src="1Draw_handsLR.js"></script> <!-- CHANGE THIS ONE -->
+   <!-- <script src="1Draw_handsLR.js"></script> CHANGE THIS ONE -->
+   <script src="Draw_interaction.js"></script> <!-- CHANGE THIS ONE -->
    
 </head>
 
